--- a/Views/Destek/Index.cshtml
+++ b/Views/Destek/Index.cshtml
@@ -81,6 +81,7 @@
 <div class="sidebar d-flex flex-column">
     <h4 class="text-center mb-4">Etüt Takip</h4>
     <nav class="nav flex-column">
+        <a class="nav-link" href="/Kullanici/Profil"><i class="bi bi-person-circle me-2"></i>Profilim</a>
         <a class="nav-link" href="/Dashboard/Index">Ana Sayfa</a>
         <a class="nav-link" href="/ProgramEtut/Index">Program & Etüt</a>
         <a class="nav-link" href="/Odev/Index">Tamamlanan Ödevler</a>
